Expose Mixdeck APIs by slug/identifier only; keep admin UUID API intact.
Mixdeck no longer leaks internal database ids. Brand form, dictionary,
script detail and brand list now key on slugName, and labels/genres on
identifier. Nested brand payloads get Mixdeck-only DTOs: custom script
actions use a prompt slug, stage playlists use genre/label identifiers
and sound-fragment slugs, logo files expose a slim shape instead of the
raw FileMetadata model, and owners are identified by email. Unknown
slugs and identifiers now fail instead of falling back.

Adds prompt slug lookups and SoundFragmentService.getSlugById to support
the mapping. The 42next admin DTOs and controllers are unchanged.

Co-authored-by: Cursor <cursoragent@cursor.com>