@@ -6,13 +6,14 @@ import com.semantyca.core.service.UserService;
 import com.semantyca.core.util.ColorUtil;
 import com.semantyca.core.util.WebHelper;
 import com.semantyca.datanest.config.DatanestConfig;
-import com.semantyca.datanest.dto.PlaylistRequestDTO;
 import com.semantyca.datanest.dto.brand.BrandDTO;
+import com.semantyca.datanest.dto.brand.OwnerDTO;
 import com.semantyca.datanest.dto.brand.mixdeck.BrandScriptEntryMixdeckDTO;
-import com.semantyca.datanest.dto.script.CustomActionDTO;
-import com.semantyca.datanest.dto.script.CustomSceneDTO;
-import com.semantyca.datanest.dto.script.CustomScriptDTO;
-import com.semantyca.datanest.dto.script.ScenePromptDTO;
+import com.semantyca.datanest.dto.brand.mixdeck.CustomActionMixdeckDTO;
+import com.semantyca.datanest.dto.brand.mixdeck.CustomSceneMixdeckDTO;
+import com.semantyca.datanest.dto.brand.mixdeck.CustomScriptMixdeckDTO;
+import com.semantyca.datanest.dto.brand.mixdeck.OwnerMixdeckDTO;
+import com.semantyca.datanest.dto.brand.mixdeck.PlaylistRequestMixdeckDTO;
 import com.semantyca.datanest.messaging.CommandPublisher;
 import com.semantyca.datanest.messaging.MetricPublisher;
 import com.semantyca.datanest.model.cnst.ScriptMode;
@@ -31,9 +32,12 @@ import com.semantyca.mixpla.model.cnst.PlaylistItemType;
 import com.semantyca.mixpla.model.cnst.SceneTimingMode;
 import com.semantyca.mixpla.model.cnst.SourceType;
 import com.semantyca.mixpla.model.cnst.WayOfSourcing;
+import com.semantyca.datanest.service.soundfragment.SoundFragmentService;
+import com.semantyca.officeframe.service.GenreService;
 import com.semantyca.officeframe.service.LabelService;
 import io.smallrye.mutiny.Uni;
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.inject.Instance;
 import jakarta.enterprise.inject.Typed;
 import jakarta.inject.Inject;
 import org.jboss.logging.Logger;
@@ -62,15 +66,18 @@ public class BrandPubService extends BrandService {
             AiAgentService aiAgentService,
             ProfileService profileService,
             LabelService labelService,
+            GenreService genreService,
+            PromptService promptService,
             SceneService sceneService,
             BrandRepository repository,
             DatanestConfig datanestConfig,
             MetricPublisher metricPublisher,
             CommandPublisher commandPublisher,
             UserSubscriptionRepository userSubscriptionRepository,
+            Instance<SoundFragmentService> soundFragmentServiceSource,
             BrandPubRepository brandPubRepository
     ) {
-        super(userService, scriptService, aiAgentService, profileService, labelService, sceneService, repository, datanestConfig, metricPublisher, commandPublisher, userSubscriptionRepository);
+        super(userService, scriptService, aiAgentService, profileService, labelService, genreService, promptService, sceneService, repository, datanestConfig, metricPublisher, commandPublisher, userSubscriptionRepository, soundFragmentServiceSource);
         this.brandPubRepository = brandPubRepository;
     }
 
@@ -106,7 +113,8 @@ public class BrandPubService extends BrandService {
                             Script script = buildScript(slug, mixdeckDto.getCustomScript().getTitle());
                             String color = ColorUtil.generateContrastColorPair()[0];
                             script.setColor(color);
-                            return brandPubRepository.insertBrandWithScript(brand, script, buildScenes(mixdeckDto.getCustomScript()), List.of(), user)
+                            return buildScenes(mixdeckDto.getCustomScript(), user)
+                                    .chain(scenes -> brandPubRepository.insertBrandWithScript(brand, script, scenes, List.of(), user))
                                     .chain(brandId -> repository.findById(brandId, user, true));
                         } else {
                             return repository.insert(brand, List.of(), user);
@@ -126,12 +134,13 @@ public class BrandPubService extends BrandService {
                                                     String color = ColorUtil.generateContrastColorPair()[0];
                                                     Script script = buildScript(slug, mixdeckDto.getCustomScript() != null ? mixdeckDto.getCustomScript().getTitle() : null);
                                                     script.setColor(color);
-                                                    List<Scene> scenes = buildScenes(mixdeckDto.getCustomScript());
-                                                    if (existingScriptId == null) {
-                                                        return brandPubRepository.insertScriptAndUpdateBrand(existingBrand.getId(), brand, script, scenes, List.of(), user)
-                                                                .chain(brandId -> repository.findById(brandId, user, true));
-                                                    }
-                                                    return brandPubRepository.updateBrandWithScript(existingBrand.getId(), existingScriptId, brand, script, scenes, List.of(), user)
+                                                    return buildScenes(mixdeckDto.getCustomScript(), user)
+                                                            .chain(scenes -> {
+                                                                if (existingScriptId == null) {
+                                                                    return brandPubRepository.insertScriptAndUpdateBrand(existingBrand.getId(), brand, script, scenes, List.of(), user);
+                                                                }
+                                                                return brandPubRepository.updateBrandWithScript(existingBrand.getId(), existingScriptId, brand, script, scenes, List.of(), user);
+                                                            })
                                                             .chain(brandId -> repository.findById(brandId, user, true));
                                                 });
                                     } else {
@@ -167,10 +176,7 @@ public class BrandPubService extends BrandService {
         dto.setProfileOverriding(src.getProfileOverriding());
         dto.setScriptMode(src.getScriptMode());
         dto.setStreamingOptions(src.getStreamingOptions());
-        dto.setCustomScript(src.getCustomScript());
-        dto.setOwner(src.getOwner());
-        dto.setLogoFiles(src.getLogoFiles());
-        dto.setRlsActions(src.getRlsActions());
+        dto.setOwner(toAdminOwner(src.getOwner()));
         dto.setSkipScriptValidation(src.isSkipScriptValidation());
         dto.setChatFeatureFlags(src.getChatFeatureFlags());
 
@@ -190,10 +196,28 @@ public class BrandPubService extends BrandService {
                         .invoke(dto::setCustomScriptId)
                         .replaceWithVoid();
         Uni<Void> labelsUni = toLabelIds(src.getLabels()).invoke(dto::setLabels).replaceWithVoid();
-        Uni<Void> genresUni = toLabelIds(src.getGenres()).invoke(dto::setGenres).replaceWithVoid();
+        Uni<Void> genresUni = toGenreIds(src.getGenres()).invoke(dto::setGenres).replaceWithVoid();
 
         return Uni.combine().all().unis(agentUni, profileUni, customScriptUni, labelsUni, genresUni).discardItems()
                 .replaceWith(dto);
+    }
+
+    /** Owner ids are internal; Mixdeck identifies owners by email and {@code resolveOwnerUserIds} fills the ids. */
+    private OwnerDTO toAdminOwner(OwnerMixdeckDTO src) {
+        if (src == null) {
+            return null;
+        }
+        OwnerDTO owner = new OwnerDTO();
+        owner.setName(src.getName());
+        owner.setEmail(src.getEmail());
+        owner.setExposeWhileSharing(src.isExposeWhileSharing());
+        owner.setActionDebugEnabled(src.isActionDebugEnabled());
+        if (src.getCoOwners() != null) {
+            owner.setCoOwners(src.getCoOwners().stream()
+                    .map(this::toAdminOwner)
+                    .collect(Collectors.toList()));
+        }
+        return owner;
     }
 
     private Uni<List<UUID>> toLabelIds(List<String> identifiers) {
@@ -202,6 +226,26 @@ public class BrandPubService extends BrandService {
         }
         List<Uni<UUID>> unis = identifiers.stream()
                 .map(identifier -> labelService.findByIdentifier(identifier).map(label -> label.getId()))
+                .collect(Collectors.toList());
+        return Uni.join().all(unis).andFailFast();
+    }
+
+    private Uni<List<UUID>> toGenreIds(List<String> identifiers) {
+        if (identifiers == null || identifiers.isEmpty()) {
+            return Uni.createFrom().item(List.of());
+        }
+        List<Uni<UUID>> unis = identifiers.stream()
+                .map(identifier -> genreService.getByFuzzyIdentifier(identifier)
+                        .map(genres -> {
+                            if (genres == null) {
+                                throw new IllegalArgumentException("Unknown genre identifier: " + identifier);
+                            }
+                            return genres.stream()
+                                    .filter(g -> identifier.equals(g.getIdentifier()))
+                                    .findFirst()
+                                    .orElseThrow(() -> new IllegalArgumentException("Unknown genre identifier: " + identifier))
+                                    .getId();
+                        }))
                 .collect(Collectors.toList());
         return Uni.join().all(unis).andFailFast();
     }
@@ -236,19 +280,19 @@ public class BrandPubService extends BrandService {
         return script;
     }
 
-    private List<Scene> buildScenes(CustomScriptDTO customScript) {
-        if (customScript.getScenes() == null) {
-            return List.of();
+    private Uni<List<Scene>> buildScenes(CustomScriptMixdeckDTO customScript, IUser user) {
+        if (customScript == null || customScript.getScenes() == null || customScript.getScenes().isEmpty()) {
+            return Uni.createFrom().item(List.of());
         }
-        List<CustomSceneDTO> customScenes = customScript.getScenes();
-        List<Scene> scenes = new ArrayList<>();
+        List<CustomSceneMixdeckDTO> customScenes = customScript.getScenes();
+        List<Uni<Scene>> unis = new ArrayList<>();
         for (int i = 0; i < customScenes.size(); i++) {
-            scenes.add(buildScene(customScenes.get(i), i + 1));
+            unis.add(buildScene(customScenes.get(i), i + 1, user));
         }
-        return scenes;
+        return Uni.join().all(unis).andFailFast();
     }
 
-    private Scene buildScene(CustomSceneDTO customScene, int seqNum) {
+    private Uni<Scene> buildScene(CustomSceneMixdeckDTO customScene, int seqNum, IUser user) {
         Scene scene = new Scene();
         scene.setTitle(customScene.getName() != null ? customScene.getName() : "Scene " + seqNum);
         scene.setSeqNum(seqNum);
@@ -258,6 +302,8 @@ public class BrandPubService extends BrandService {
         scene.setTalkativity(customScene.getTalkativity());
         scene.setAllowJingles(customScene.isAllowJingles());
         scene.setAllowAds(customScene.isAllowAds());
+
+        List<Uni<Void>> resolutions = new ArrayList<>();
         if (customScene.getActions() != null) {
             List<CustomAction> customActions = customScene.getActions().stream()
                     .filter(a -> !"predefined".equals(a.getType()))
@@ -265,44 +311,64 @@ public class BrandPubService extends BrandService {
                     .collect(Collectors.toList());
             if (!customActions.isEmpty()) scene.setActions(customActions);
 
-            List<ScenePrompt> prompts = customScene.getActions().stream()
-                    .filter(a -> "predefined".equals(a.getType()) && a.getActionId() != null)
-                    .map(a -> { ScenePrompt sp = new ScenePrompt(); sp.setPromptId(a.getActionId()); return sp; })
-                    .collect(Collectors.toList());
-            if (!prompts.isEmpty()) scene.setIntroPrompts(prompts);
+            List<CustomActionMixdeckDTO> predefined = customScene.getActions().stream()
+                    .filter(a -> "predefined".equals(a.getType()) && a.getActionSlug() != null && !a.getActionSlug().isBlank())
+                    .toList();
+            if (!predefined.isEmpty()) {
+                List<ScenePrompt> prompts = new ArrayList<>();
+                predefined.forEach(a -> {
+                    ScenePrompt sp = new ScenePrompt();
+                    prompts.add(sp);
+                    resolutions.add(promptService.getIdBySlug(a.getActionSlug(), user)
+                            .invoke(sp::setPromptId)
+                            .replaceWithVoid());
+                });
+                scene.setIntroPrompts(prompts);
+            }
         }
-        scene.setPlaylistRequest(mapToPlaylistRequest(customScene.getStagePlaylist()));
-        return scene;
+
+        resolutions.add(mapToPlaylistRequest(customScene.getStagePlaylist(), user)
+                .invoke(scene::setPlaylistRequest)
+                .replaceWithVoid());
+
+        return Uni.join().all(resolutions).andFailFast().replaceWith(scene);
     }
 
-    private ScenePrompt mapToScenePrompt(ScenePromptDTO dto) {
-        ScenePrompt sp = new ScenePrompt();
-        sp.setPromptId(dto.getPromptId());
-        return sp;
-    }
-
-    private CustomAction mapToCustomAction(CustomActionDTO dto) {
+    private CustomAction mapToCustomAction(CustomActionMixdeckDTO dto) {
         CustomAction action = new CustomAction();
         action.setName(dto.getName());
         action.setInstruction(dto.getInstruction());
         return action;
     }
 
-    private PlaylistRequest mapToPlaylistRequest(PlaylistRequestDTO dto) {
+    private Uni<PlaylistRequest> mapToPlaylistRequest(PlaylistRequestMixdeckDTO dto, IUser user) {
         if (dto == null) {
-            return null;
+            return Uni.createFrom().nullItem();
         }
         PlaylistRequest pr = new PlaylistRequest();
         pr.setSourcing(dto.getSourcing() != null ? WayOfSourcing.valueOf(dto.getSourcing()) : null);
         pr.setTitle(dto.getTitle());
         pr.setArtist(dto.getArtist());
-        pr.setGenres(dto.getGenres());
-        pr.setLabels(dto.getLabels());
         pr.setType(dto.getType() != null ? dto.getType().stream().map(PlaylistItemType::valueOf).toList() : null);
         pr.setSource(dto.getSource() != null ? dto.getSource().stream().map(SourceType::valueOf).toList() : null);
         pr.setSearchTerm(dto.getSearchTerm());
-        pr.setSoundFragments(dto.getSoundFragments());
-        return pr;
+
+        List<Uni<Void>> resolutions = new ArrayList<>();
+        resolutions.add(toGenreIds(dto.getGenres()).invoke(pr::setGenres).replaceWithVoid());
+        resolutions.add(toLabelIds(dto.getLabels()).invoke(pr::setLabels).replaceWithVoid());
+        resolutions.add(toSoundFragmentIds(dto.getSoundFragments(), user).invoke(pr::setSoundFragments).replaceWithVoid());
+        return Uni.join().all(resolutions).andFailFast().replaceWith(pr);
+    }
+
+    private Uni<List<UUID>> toSoundFragmentIds(List<String> slugs, IUser user) {
+        if (slugs == null || slugs.isEmpty()) {
+            return Uni.createFrom().item(List.of());
+        }
+        SoundFragmentService soundFragmentService = soundFragmentServiceSource.get();
+        List<Uni<UUID>> unis = slugs.stream()
+                .map(slug -> soundFragmentService.getIdBySlug(slug, user))
+                .collect(Collectors.toList());
+        return Uni.join().all(unis).andFailFast();
     }
 
 }
